1999-06-20  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * cfgacorn.lsp, cfgamiga.lsp, cfgdos.lsp, cfgwin32.lsp
          (*clhs-root-default*): Assign default value.
        * makemake.in (config.lsp): Emit "echo ... >> config.lsp" only for
          Unix.

1999-06-18  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (low_flush_buffered_socket): Call sock_write, not
          full_write.

1999-06-18  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (create_input_pipe): New function.
          (MAKE-PIPE-INPUT-STREAM): Call it.
          (create_output_pipe): New function.
          (MAKE-PIPE-OUTPUT-STREAM): Call it.
          (create_io_pipe): New function.
          (MAKE-PIPE-IO-STREAM): Call it.

1999-06-18  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * socket.d (inet_addr): Don't declare on WIN32.
          (setsockopt): Remove second declaration.
          (SOCKET-SERVICE-PORT): On WIN32, use a replacement for getservent().

1999-06-18  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * makemake.in (callback.h): Copy also vacall_r.h and trampoline_r.h.

1999-06-18  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (GETTEXT): Define also if not using GNU_GETTEXT.

1999-06-18  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * places.lsp (MACRO-FUNCTION): Ignore `env'.

1999-06-18  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (strm_keyboard_len): Define as strm_len, not 0.
          (make_keyboard_stream): Don't add strm_len to strm_keyboard_len, it
          is already included.

1999-06-17  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (malloc, free): Remove declarations.
          (malloca, freea): Move declarations.
          (DRIVER_frame_data): Remove type.
        * spvw_alloca.d (malloc, free): New declarations.
        * aridecl.d (HAVE_NUM_STACK, NUM_STACK, NUM_STACK_bound,